[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ananke-crypto-tracker"
version = "1.0.0"
description = "Real-time cryptocurrency spot price tracker with terminal and web interfaces"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "rich>=13.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-aiohttp>=1.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
ananke = "ananke.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ananke"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["ananke"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
